<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lukashempel.trinkspielgedoenstestnumero2.GameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btnNext"
        tools:ignore="NotSibling,UselessParent">

        <TextView
            android:text="@string/wildcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvType"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:fontFamily="casual"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/wildcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_gravity="bottom">

                <Button
                    android:text="@string/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:id="@+id/btnNext"
                    android:onClick="nextQuestion"
                    android:textAlignment="center"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <TextView
                    android:text="@string/activeruletext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvActiveRuleText"
                    android:layout_weight="1"
                    android:textAlignment="viewStart" />

                <TextView
                    android:text="@string/activerule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvActiveRule"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_green_light" />

            </LinearLayout>

            <TextView
                android:text="@string/debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDebug"
                android:layout_weight="1" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
